[package]
name = "rustfight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.2"
macroquad-tiled = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
spin_sleep = "1.1.1"
